remove print_r from add location, fixed thumbs on photoplayer, updated script for transferring locations, and some other stuff.

--- a/html/pages/home/home.css
+++ b/html/pages/home/home.css
@@ -81,9 +81,15 @@ li.sport:hover, li.sport a:hover {
 
 }
 
-.type-icons, .seach-box{
+.seach-box{
     margin:0 15px 0 15px;
 }
+
+.type-icons a{
+    color: #333;
+    padding: 0 10px 0 5px;
+}
+
 img.tiny-sport-icon{
     max-width: 20px;
     max-height: 20px;
