--- a/html/css/app.css
+++ b/html/css/app.css
@@ -224,6 +224,7 @@ input[disabled].hasDatepicker, input[readonly].hasDatepicker {
 
 ul li.image{
     padding:10px;
+    min-height: 220px;
     /*	margin-right: 20px;
         margin-bottom: 20px;*/
 }
@@ -870,6 +871,16 @@ span.team-label{
 #sports-info ul#sport-list{
     margin:0 0 0 0;
 }
+
+#sports-info ul#sport-list .sport:hover{
+    background:none;
+}
+
+#sports-info ul#sport-list .sport a{
+    color:#333;
+    font-size: .9em;
+}
+
 
 /** Popup CSS **/
 .modal-body {
