--- a/html/usercontrols/addgame/templates/layout.html
+++ b/html/usercontrols/addgame/templates/layout.html
@@ -105,12 +105,13 @@
 <div class="clear"></div>
 	<div class="section-main-location_h displayNone">
 		<!-- <div class="green-left-heading">LOCATION</div> -->
-		<div class="clear"></div>
+		<!--div class="clear"></div>
 		<strong>Location : </strong>		
 <div class="clear"></div>
-		<input type="text" class="txt-game-location-id_h displayNone" >
-		<div class="div-game-location_h">
-		</div>
+		<input type="text" class="txt-game-location-id_h displayNone"-->
+		<div class="location-view-h">&nbsp;</div>
+		<input type="hidden" class="txt-game-location-id_h displayNone"/>
+		<div class="div-game-location_h"></div>
 			<div class="clear"></div>
 		<span class="displayNone field-message field-message_h"></span>
 	</div>
