--- a/html/packages/media/templates/image-list.html
+++ b/html/packages/media/templates/image-list.html
@@ -9,4 +9,4 @@
 	</div>
 </div>
 {{/target}}-->
-<div class="clear"><a href="javascript: void(0);" class="see-more-h">See more</a></div>
+<div class="clear"><a href="javascript: void(0);" class="see-more-h">More</a></div>
