--- a/html/packages/media/templates/add-media.html
+++ b/html/packages/media/templates/add-media.html
@@ -1,5 +1,1 @@
-
-Add 
-{{#links}}
-<a href="{{link}}" title="{{label}}" id="{{id}}">{{label}}</a>
-{{/links}}
+{{#links}}<a href="{{link}}" title="{{label}}" id="{{id}}">{{label}}</a>{{/links}}
