new build and fixed the auth check again.

--- a/html_build/css/app.css
+++ b/html_build/css/app.css
@@ -188,6 +188,7 @@ input[disabled].hasDatepicker, input[readonly].hasDatepicker {
 }
 ul li.image{
     padding:10px;
+    min-height: 220px;
     
 }
 div.image-item-container{
@@ -452,9 +453,10 @@ span.ui-helper-hidden-accessible {
     border-color: transparent rgb(229, 229, 229); border-style: solid; border-width: 18px 77px 18px 0;
     -webkit-transform: rotate(-25deg); -ms-transform: rotate(-25deg); transform: rotate(-25deg);
 }
-	.see-more-h {
+.see-more-h {
 	float: right;
-margin-right: 100px;
+    margin: 0 40px 30px 0;
+    color: #333;
 }
 #comment_div {
 	text-align: right;
@@ -689,6 +691,13 @@ span.team-label{
 }
 #sports-info ul#sport-list{
     margin:0 0 0 0;
+}
+#sports-info ul#sport-list .sport:hover{
+    background:none;
+}
+#sports-info ul#sport-list .sport a{
+    color:#333;
+    font-size: .9em;
 }
 .modal-body {
 	width: 100%;
@@ -1003,4 +1012,21 @@ margin-top:10px;
 .container_batch_tag .dropdown{height:30px;margin:5px 0}
 .image-drop-area .drop-text {
 	margin-top: 25%;
+}
+#addPhoto, #addVideo, .add-comment-h{
+    background-repeat: no-repeat;
+    padding:0 0 0 35px;
+    color:#333;
+    display: inline-block;
+    min-height: 25px;
+    margin-left:15px;
+}
+#addPhoto{
+    background-image: url('http://cdn.athletez.com/resources/img/photo.png');
+}
+#addVideo{
+    background-image: url('http://cdn.athletez.com/resources/img/video.png');
+}
+.add-comment-h{
+    background-image: url('http://cdn.athletez.com/resources/img/comment.png');
 }
