--- a/html_build/pages/game/game.css
+++ b/html_build/pages/game/game.css
@@ -3,8 +3,11 @@
 	color: #000;
 	float: left;
 	width: 100%;
-	padding: 5px 10px 5px 10px;
+	padding: 0;
     font-family: "Avenir","HelveticaNeue","Helvetica";
+}
+.game-heading > * {
+margin:10px;
 }
 .game-heading h3 {
 	font-weight: bold;
