--- a/html_build/usercontrols/photo-player/photoPlayer.css
+++ b/html_build/usercontrols/photo-player/photoPlayer.css
@@ -105,7 +105,7 @@ div.right-arrow-container > img{
 }
 .images-list {
 	padding: 0px 10px;
-	margin: 35px 0 0 0;
+	margin: 0;
     float: left;
 }
 .thumbs-outer {
