--- a/html_build/pages/profile/templates/header.html
+++ b/html_build/pages/profile/templates/header.html
@@ -28,7 +28,7 @@
 	    </div>
 	    
 	    <div class="stats-panel span5" style="width:35%;">
-	    	<div class="stats-header">Stats</div>
+	    	<div class="stats-header"><span id="profileName"></span>Stats</div>
 	    	<div id="fitnessbasic-wrap"></div>
 	    </div>
 	</div>    
