--- a/html_build/pages/game/templates/header.html
+++ b/html_build/pages/game/templates/header.html
@@ -60,7 +60,7 @@
 	<div id="votes-area-h"></div>
 </div>
 
-<div id="modalPopup" class="modal photo-frame-model hide fade model-popup-h">
+<div id="modalPopupGameEdit" class="modal photo-frame-model hide fade">
 	<div class="modal-header">
 		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
 			&times;
