--- a/html/pages/imageup/imageup.css
+++ b/html/pages/imageup/imageup.css
@@ -178,3 +178,12 @@ color: red;
 	border: none;
 	box-shadow: none;
 }
+.image_upload_loader_new {
+	background: url("http://cdn.athletez.com/resources/img/green_loading.gif") repeat scroll 0 0 rgba(0, 0, 0, 0);
+    height: 250px;
+    opacity: 0.5;
+    position: absolute;
+    top: 0;
+    width: 260px;
+   margin: 0;
+}
