--- a/html/usercontrols/photo-player/photoPlayer.css
+++ b/html/usercontrols/photo-player/photoPlayer.css
@@ -97,11 +97,13 @@ div.image-controls{
 }
 
 div.right-arrow-container, div.left-arrow-container{
-    height:100%;
+/*    height:100%;
     position: relative;
-    width:20%;
     vertical-align: middle;
     text-align: center;
+  */
+    width:20%;
+
 }
 
 div.right-arrow-container{
