--- a/html/pages/home/home.css
+++ b/html/pages/home/home.css
@@ -74,7 +74,7 @@ li.sport:hover, li.sport a:hover {
 }
 #menu .menu-link-h{
     font-weight: bolder;
-    font-family: "Avenir", "HelveticaNeue";
+    font-family: 'Nunito', "HelveticaNeue";
     font-size: 1.2em;
     color:#333;
     text-transform: uppercase;
