--- a/html/pages/home/templates/layout.html
+++ b/html/pages/home/templates/layout.html
@@ -1,6 +1,9 @@
 <div class="template-container">
 	<div id="main-header"></div>
 
+	<div class="register-wrapper register-wrapper-h"></div>
+
+
 	<div id="main-content" class="row-fluid">
 		<div class="green-left-heading">
 			Top Rated
