--- a/html/pages/signup/templates/basciFinal.html
+++ b/html/pages/signup/templates/basciFinal.html
@@ -81,15 +81,15 @@
 					</div>
 					</div>
 					<div id="submitbutton">
-						<input type="submit" name="create" value="Create User" class="regsubmitfinal" />
+						<input type="submit" name="create" value="Sign Up" class="regsubmitfinal" />
 					</div>	
 				</form>
 				
-			<div id="reglogin">
-		
-			<span>Been here before <a href="#">sign in</a></span>
-		
-			</div>
+			<%  if(!page) { %>	
+				<div id="reglogin">
+					<span>Been here before <a href="#">sign in</a></span>
+				</div>
+			<% } %>
 		</div>
 	</div>
 </div>
