--- a/html/pages/signup/templates/registration.html
+++ b/html/pages/signup/templates/registration.html
@@ -31,13 +31,16 @@
 				<div class="error">
 				</div>
 				</div>
-				<input type="submit" name="create" value="Create User" class="regsubmit" />
+				<input type="submit" name="create" value="Sign Up" class="regsubmit" />
 			</form>
-			<div id="reglogin">
-		
-			<span>Been here before <a href="#">sign in</a></span>
-		
-			</div>
+			<%  if(!onlyRegister) { %>
+			
+				<div id="reglogin">
+				<span>Been here before <a href="#">sign in</a></span>
+				</div>
+				
+			<% } %>	
+			
 		</div>
 	</div>
 </div>
