--- a/html_build/css/app.css
+++ b/html_build/css/app.css
@@ -164,7 +164,7 @@ input[disabled].hasDatepicker, input[readonly].hasDatepicker {
 	padding: 5px 15px;
 	text-align: center;
 	margin: 25px 0;
-    font-family: "Avenir", "HelveticaNeue", "Helvetica";
+    font-family: 'Nunito', "HelveticaNeue", "Helvetica";
     font-size:1.0em;
     font-weight: bolder;
     text-transform: uppercase;
@@ -584,7 +584,7 @@ span.ui-helper-hidden-accessible {
 }
 .stats-header{
     background-color:#b9b9ba;
-    font-family: 'Avenir','HelveticaNeue';
+    font-family: 'Nunito','HelveticaNeue';
     font-weight: bold;
     font-size: 1.7em;
     padding:10px;
@@ -604,7 +604,7 @@ span.ui-helper-hidden-accessible {
 span.team-label{
     display: inline-block;
     margin-left:100px;
-    font-family: 'Avenir','HelveticaNeue';
+    font-family: 'Nunito','HelveticaNeue';
     font-weight: bolder;
     font-size: 1.1em;
 }
