--- a/html_build/css/fonts.css
+++ b/html_build/css/fonts.css
@@ -17,25 +17,25 @@
 	font-style: normal;
 }
 @font-face {
-	font-family: 'Avenir';
+	font-family: 'Nunito';
 	src: url('http://cdn.athletez.com/resources/fonts/AvenirLTStd-Black.woff') format('woff');
 	font-weight: bold;
 	font-style: normal;
 }
 @font-face {
-	font-family: 'Avenir';
+	font-family: 'Nunito';
 	src: url('http://cdn.athletez.com/resources/fonts/AvenirLTStd-Book.woff') format('woff');
 	font-weight: lighter;
 	font-style: normal;
 }
 @font-face {
-	font-family: 'Avenir';
+	font-family: 'Nunito';
     src: url('http://cdn.athletez.com/resources/fonts/AvenirLTStd-BookOblique.woff') format('woff');
 	font-weight: normal;
 	font-style: oblique;
 }
 @font-face {
-	font-family: 'Avenir';
+	font-family: 'Nunito';
     src: url('http://cdn.athletez.com/resources/fonts/HelveticaNeue-Medium.woff') format('woff');
 	font-weight: normal;
 	font-style: normal;
