--- a/html_build/pages/game/game.css
+++ b/html_build/pages/game/game.css
@@ -4,7 +4,7 @@
 	float: left;
 	width: 100%;
 	padding: 0;
-    font-family: "Avenir","HelveticaNeue","Helvetica";
+    font-family: 'Nunito',"HelveticaNeue","Helvetica";
 }
 .game-heading > * {
 margin:10px;
@@ -66,7 +66,7 @@ ul.teams-list li.team-item{
     margin-top:10px;
     display:block;
     border-bottom:1px solid #CCCCCC;
-    font-family:'Avenir','HelveticaNeue','Helvetica';
+    font-family:'Nunito','HelveticaNeue','Helvetica';
 }
 ul.teams-list li.team-item:last-child{
     border:0;
