--- a/html_build/usercontrols/imagecropper/imagecropper.css
+++ b/html_build/usercontrols/imagecropper/imagecropper.css
@@ -28,7 +28,7 @@
     display: inline-block;
     font-size:1.6em;
     font-weight: bolder;
-    font-family: "Avenir";
+    font-family: 'Nunito';
     padding:10px;
 }
 .modal.imagecropper button.close{
