--- a/html/pages/profilesetting/templates/highschool.html
+++ b/html/pages/profilesetting/templates/highschool.html
@@ -1,7 +1,6 @@
 <div class="row-fluid">
 	<span class="green-left-heading">High School</span>
 </div>
-<div><a class="add-school-h" href="javascript: void(0);">Add a New School</a></div>
 <div id="btn-Add-School" class="clearfix div-add-dotted">
 	+ ADD SCHOOL
 </div>
@@ -16,6 +15,7 @@
 	<div>
 		<span class="span2">What School?</span>
 		<input type="text" id="txt-school-school" placeholder="Just Start Typing" disabled="disabled" tabindex="0"/>
+		<a class="add-school-h" href="javascript: void(0);">Add a New School</a>
 		<p class="field-error"></p>
 		<p class="field-message"></p>
 	</div>
