--- a/html/pages/chrome/templates/header.html
+++ b/html/pages/chrome/templates/header.html
@@ -37,12 +37,13 @@
     </div>
 </div>
 
+<!--
 {{^authorized}}
 <div class="row-fluid textright">
     {{signup_social_label}} <a href="{{signup_facebook_link}}" class="signup-facebook">{{signup_facebook_label}}</a>
 	<a href="{{signup_email_link}}" class="signup-email">{{signup_email_label}}</a>
 </div>
-{{/authorized}}
+{{/authorized}} -->
 <!--
  <div class="alert global-alert"></div>
 <div class="alert alert-info global-messages"></div>
