--- a/html/pages/home/templates/layout.html
+++ b/html/pages/home/templates/layout.html
@@ -1,7 +1,8 @@
 <div class="template-container">
 	<div id="main-header"></div>
 
-	<div class="register-wrapper register-wrapper-h"></div>
+		<div class="register-wrapper"></div>
+	<div class="register-wrapper-h"></div>
 
 
 	<div id="main-content" class="row-fluid">
