--- a/html/pages/home/home.css
+++ b/html/pages/home/home.css
@@ -157,6 +157,13 @@ li.sport a:hover {
 	padding-top: 0px;
 }
 
+#mainreg #fbpane {
+	background: url(/images/social/facebook.png) no-repeat;
+	width: 300px;
+	background-color: transparent;
+	background-size: cover;
+}
+
 #regcontainer #firstreg {
 	float: left;
 width: 350px;
