--- a/html/css/app.css
+++ b/html/css/app.css
@@ -1286,3 +1286,6 @@ margin-top:10px;
 .add-comment-h{
     background-image: url('http://cdn.athletez.com/resources/img/comment.png');
 }
+.display_none_important{
+	display : none !important;
+}
