--- a/html/usercontrols/photo-player/templates/tag-item.html
+++ b/html/usercontrols/photo-player/templates/tag-item.html
@@ -1,9 +1,6 @@
 <div class="row-fluid">
     <div class="tags-name">
-		<span><a href="{{_link}}"><img src="{{_thumbnail}}" width="20" height="20" /><span>{{{_label}}}</span></a></span>
-
-    </div>
-    <div class="tags-number">
-    	{{count}}
+		<span><a href="{{_link}}" title="{{{_label}}}"><img src="{{_thumbnail}}" alt="{{{_label}}}" /><span>{{{_label}}}</span></a></span>
+		<span class="tags-number">{{count}}10</span>
     </div>
 </div>
