--- a/html/css/app.css
+++ b/html/css/app.css
@@ -341,7 +341,11 @@ div.image-item-container > img{
 .detail-view h6{
     margin: 15px 8px 8px 8px;
     text-transform:uppercase;
-    font-size: 1.6em;
+    font-size: 1.4em;
+}
+.detail-view span{
+    margin: 15px 8px 8px 8px;
+    font-size: .8em;
 }
 /***** Image Styles Ends *****/
 
