changed header/signup block.

--- a/html/css/app.css
+++ b/html/css/app.css
@@ -38,9 +38,14 @@ html, body {
 	height: 100%;
 }
 body {
-	max-width: 1000px;
+
 	margin: 0 auto;
 	background: #e0e0e0;
+}
+
+#main{
+    max-width: 1000px;
+    margin: 10px auto;
 }
 
 .template-container {
@@ -73,12 +78,8 @@ header .logo {
 	float: left;
 	margin: 6px 0;
 }
-header .searchform {
-	float: left;
-	margin: 6px 15px;
-}
-header .searchform form {
-	margin-bottom: 0;
+header a{
+    color: shite;
 }
 header .account {
 	float: right;
@@ -344,7 +345,7 @@ div.image-item-container > img{
     font-size: 1.4em;
 }
 .detail-view span{
-    margin: 15px 8px 8px 8px;
+    margin: 10px 8px 8px 8px;
     font-size: .8em;
 }
 /***** Image Styles Ends *****/
