--- a/html/pages/profilesetting/templates/highschool.html
+++ b/html/pages/profilesetting/templates/highschool.html
@@ -7,14 +7,14 @@
 <div id="section-Add-Sports-school" class="displayNone add-org-fields">
 	<div>
 		<span class="span2">What State?</span>
-		<input type="text" id="txt-school-state" placeholder="Just Start Typing" tabindex="0"/>
+		<input type="text" id="txt-school-state" placeholder="Just Start Typing"/>
 		<p class="field-error"></p>
 		<p class="field-message"></p>
 	</div>
 
 	<div>
 		<span class="span2">What School?</span>
-		<input type="text" id="txt-school-school" placeholder="Just Start Typing" disabled="disabled" tabindex="0"/>
+		<input type="text" id="txt-school-school" placeholder="Just Start Typing" disabled="disabled"/>
 		<a class="add-school-h" href="javascript: void(0);">Add a New School</a>
 		<p class="field-error"></p>
 		<p class="field-message"></p>
