--- a/html/pages/login/templates/layout.html
+++ b/html/pages/login/templates/layout.html
@@ -5,7 +5,7 @@
 	}
 </style>
 <div id="Loginview" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-	<div id="logincontainer">
+	<div id="">
 		<div class="modal-header">
 			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
 			<h3 id="label">Login</h3>
