--- a/html/pages/chrome/templates/header.html
+++ b/html/pages/chrome/templates/header.html
@@ -3,7 +3,7 @@
     <div class="logo">
     {{#branding}}
     <a class="brand" title="home" href="#home">
-        <img style="height: 30px;" src="{{base_url}}{{src}}" alt="{{alt}}" />
+        <img src="{{base_url}}{{src}}" id="header_logo" alt="{{alt}}" />
     </a>
     {{/branding}}
     </div>
