--- a/html/pages/home/templates/menu.html
+++ b/html/pages/home/templates/menu.html
@@ -82,27 +82,22 @@
 			</div>
 		</div>
 	</div>
-	<div id="video" class="menu span2">
-		<a href="javascript:void(0)" class="menu-link-h view-link-h"><span class="option-heading-h">TYPE</span>
+	<div id="resulttype" class="menu span2">
+		<a href="javascript:void(0)" class="menu-link-h restype-link-h"><span class="option-heading-h">Athletes</span>
 
 			<div class="caret-large-container">
 				<span class="caret-large"></span>
 			</div>
 		</a>
 
-		<div class="dd menu-detail-h reset-view-area-h view-options-h">
-			
+		<div class="dd menu-detail-h reset-view-area-h restype-options-h">
+
 			<div class="clearfix"></div>
-				<ul class="dropdown-menu" style="display: block; position: relative; margin-bottom:15px;">
-					
-					<li><a id="video" class="searchBtn"  data-number="0" href="javascript:void(0)">Videos</a></li>
-					<li><a id="image" class="searchBtn" data-number="1" href="javascript:void(0)">Images</a></li>
-					<li>
-					<a id="user" class="searchBtn" data-number="2" href="javascript:void(0)">Athletes</a>	
-					</li>
-					<li><a id="game" class="searchBtn" data-number="3" href="javascript:void(0)">Games</a>
-					</li>
-										
+				<ul class="dropdown-menu" style="display: block; position: relative;">
+					<li><a id="user" class="restype" data-number="2" href="javascript:void(0)">Athletes</a></li>
+					<li><a id="image" class="restype" data-number="1" href="javascript:void(0)">Images</a></li>
+					<li><a id="video" class="restype"  data-number="0" href="javascript:void(0)">Videos</a></li>
+					<li><a id="game" class="restype" data-number="3" href="javascript:void(0)">Games</a></li>
 				</ul>
 		</div>
 	</div>
